--- a/productspage/pagescode/consolescode/wiiu.html
+++ b/productspage/pagescode/consolescode/wiiu.html
@@ -19,7 +19,7 @@
                 <li><a class = "active"href="">Log in</a></li>
                 <li><a class = "active"href="">Previous Orders</a></li>
                 <li><a class = "active"href="">Checkout</a></li>
-                <li><a class = "active"href="/index.html">Search</a></li>
+                <li><a class = "active"href="/../../index.html">Search</a></li>
                 <li><a class = "active"href=""><i class="far fa-shopping-bag"></i></a></li>
 
 
