--- a/productspage/index.html
+++ b/productspage/index.html
@@ -21,7 +21,7 @@
                 <li><a class = "active"href="">Previous Orders</a></li>
                 <li><a class = "active"href="">Checkout</a></li>
                 <li><a class = "active"href="index.html">Search</a></li>
-                <li><a class = "active"href="../checkoutpage/cart.php"><i class="far fa-shopping-bag"></i></a></li>
+                <li><a href="../checkoutpage/cart.php" class = "active"><i class="far fa-shopping-bag"></i></a></li>
 
 
             </ul>
