--- a/checkoutpage/cart.html
+++ b/checkoutpage/cart.html
@@ -48,7 +48,7 @@
                 </form>
             </div>
         </div>
-        <a href="wishlist.php">Enter wishlist</a>
+        <a href="wishlist.html">Enter wishlist</a>
     </div>
     </form>
   </body>
