--- a/checkoutpage/wishlist.html
+++ b/checkoutpage/wishlist.html
@@ -7,7 +7,23 @@
     <title></title>
   </head>
   <body>
+    <section id="header">
+      <a href="#"><img src="categoryimages/Faveicon.jpg"class="logo"height="80"alt="logo"></a>
+      <div>
+          <ul id="Navbar">
+              <li><a class = "active" href="">Contact Us</a></li>
+              <li><a class="active" href="">Home</a></li>
+              <li><a class = "active" href="">About Us</a></li>
+              <li><a class = "active" href="">Sign Up</a></li>
+              <li><a class = "active"href="">Log in</a></li>
+              <li><a class = "active"href="">Previous Orders</a></li>
+              <li><a class = "active"href="">Checkout</a></li>
+              <li><a class = "active"href="index.html">Search</a></li>
+              <li><a href="../checkoutpage/cart.php" class = "active"><i class="far fa-shopping-bag"></i></a></li>
 
+
+          </ul>
+      </div>
         <h1>WISHLIST PAGE</h1>
 
     
