linked mini product pages to checkout cart

--- a/productspage/pagescode/consolescode/switch.html
+++ b/productspage/pagescode/consolescode/switch.html
@@ -20,7 +20,7 @@
                 <li><a class = "active"href="">Previous Orders</a></li>
                 <li><a class = "active"href="">Checkout</a></li>
                 <li><a class = "active"href="../../index.html">Search</a></li>
-                <<li><a href="../checkoutpage/cart.html" class = "active"><i class="far fa-shopping-bag"></i></a></li>
+                <li><a href="../../../checkoutpage/cart.html" class = "active"><i class="far fa-shopping-bag"></i></a></li>
 
 
             </ul>
