linked cart page back to other pages, added nav bar to cart

--- a/checkoutpage/cart.html
+++ b/checkoutpage/cart.html
@@ -5,8 +5,27 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style_cart.css">
     <title></title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
   </head>
   <body>
+    <section id="header">
+      <a href="#"><img src="../productspage/categoryimages/Faveicon.jpg"class="logo"height="80"alt="logo"></a>
+      <div>
+          <ul id="Navbar">
+              <li><a class = "active" href="">Contact Us</a></li>
+              <li><a class="active" href="">Home</a></li>
+              <li><a class = "active" href="">About Us</a></li>
+              <li><a class = "active" href="">Sign Up</a></li>
+              <li><a class = "active"href="">Log in</a></li>
+              <li><a class = "active"href="">Previous Orders</a></li>
+              <li><a class = "active"href="">Checkout</a></li>
+              <li><a class = "active"href="../productspage/index.html">Search</a></li>
+              <li><a href="../checkoutpage/cart.html" class = "active"><i class="far fa-shopping-bag"></i></a></li>
+
+
+          </ul>
+      </div>
+  </section>
 
     <div class="cart-container">
         <h1>CART PAGE</h1>
