some more adjustments to footer

--- a/productspage/index.html
+++ b/productspage/index.html
@@ -66,7 +66,6 @@
 
 
         <div class="column">
-            <img class="faveicon2"src="categoryimages/Faveicon.jpg"class="logo"height="80"alt="logo">
             <h4>Contact Details</h4>
             <p><strong>Address</strong>: 236 Coventry Road, TW4 5PF, Birmingham</p>
             <p><strong>Phone</strong>: +44 7748374824</p>
@@ -90,7 +89,7 @@
 
         </div>
         <div class="column for installing">
-            <h4>Install the App!</h4>
+            <h4>Install the App</h4>
             <p>From Google play or the Apple Store</p>
             <div class="row">
                 <a href=""><img src="../productspage/categoryimages/install.jpg"height="100"alt="Install on apple"></a>
