--- a/productspage/index.html
+++ b/productspage/index.html
@@ -76,7 +76,7 @@
                 <h4>Find us</h4>
                 <div class="icon">
                     <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fwww.youtube.com%2Fsignin%3Faction_handle_signin%3Dtrue%26app%3Ddesktop%26hl%3Den-GB%26next%3Dhttps%253A%252F%252Fwww.youtube.com%252Faccount%253Fcbrd%253D1%26feature%3Dredirect_login&hl=en-GB&ifkv=AcMMx-foUezV6lsMwrAiaF0cSOPX8I9OTfafpm85QchDSOitYXBnULY3yAsTDu-VgFogtDlSEzswqw&passive=true&service=youtube&uilel=3&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S85371598%3A1732741161620598&ddm=1"><i class="fab fa-youtube"></i></a>
-                    <a href="https://www.instagram.com/accounts/login/?hl=en"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
                     <a href="https://x.com/i/flow/login?lang=en"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.facebook.com/login/?locale=en_GB"><i class="fab fa-facebook-f"></i></a>
 
@@ -92,7 +92,8 @@
             <h4>Install the App</h4>
             <p>From Google play or the Apple Store</p>
             <div class="row">
-                <a href=""><img src="../productspage/categoryimages/install.jpg"height="100"alt="Install on apple"></a>
+                <a href="https://www.apple.com/uk/app-store/"><img src="../productspage/categoryimages/applestore.png"height="65"alt="Install on apple"></a>
+                <a href="https://play.google.com/store/games?device=windows&gl=GB&utm_source=emea_Med&utm_medium=hasem&utm_content=May2021&utm_campaign=Evergreen&pcampaignid=MKT-EDR-emea-gb-1707522-Med-hasem-py-Evergreen-May2021-Text_Search_BKWS-test_ctrl_cta_RSA%7CONSEM_kwid_43700007015697573&gad_source=1&gclid=Cj0KCQiAo5u6BhDJARIsAAVoDWveok4_-kIGDnNnir16GBv33yjeL5JMHlM9Xzse_KO_pu_JsA8bro0aAuNaEALw_wcB&gclsrc=aw.ds"><img src="../productspage/categoryimages/googleplaystore.png"height="65"alt="Install on google play"></a>
 
             </div>
             <p>Payment methods accepted:</p>
