--- a/productspage/index.html
+++ b/productspage/index.html
@@ -17,7 +17,7 @@
                 <li><a class="active" href="">Home</a></li>
                 <li><a class = "active" href="">About Us</a></li>
                 <li><a class = "active" href="">Sign Up</a></li>
-                <li><a class = "active"href="">Log in</a></li>
+                <li><a class = "active"href="login.html">Log in</a></li>
                 <li><a class = "active"href="">Previous Orders</a></li>
                 <li><a class = "active"href="">Checkout</a></li>
                 <li><a class = "active"href="index.html">Search</a></li>
