--- a/contactuspage/contactus.html
+++ b/contactuspage/contactus.html
@@ -67,8 +67,10 @@
         <!-- Footer Section -->
         <footer class="footer">
             <p>Need further assistance?</p>
-            <p><strong>Email:</strong> <a href="mailto:support@devicedirect.com">support@devicedirect.com</a></p>
+            <p><strong>Address:</strong> 236 Coventry Road, TW4 5PF, Birmingham </p>
             <p><strong>Phone:</strong> +44 7748374824 </p>
+            <p><strong>Email:</strong> <a href="mailto:support@devicedirect.com">support@devicedirect.com</a></p>
+            <p><strong>Hours:</strong> 09:00 - 17:00 Mon - Fri </p>
         </footer>
     </div>
 </body>
