--- a/contactuspage/contactus.html
+++ b/contactuspage/contactus.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Device Direct</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <!-- Header Section -->
-        <header class="header">
+        <header id="header">
             <h1><span class="icon">&#9993;</span> Contact Us</h1>
             <p>We’re here to assist you. Fill out the form below, and we’ll get back to you promptly!</p>
         </header>
@@ -65,12 +65,22 @@
         </main>
 
         <!-- Footer Section -->
-        <footer class="footer">
-            <p>Need further assistance?</p>
-            <p><strong>Address:</strong> 236 Coventry Road, TW4 5PF, Birmingham </p>
-            <p><strong>Phone:</strong> +44 7748374824 </p>
-            <p><strong>Email:</strong> <a href="mailto:support@devicedirect.com">support@devicedirect.com</a></p>
-            <p><strong>Hours:</strong> 09:00 - 17:00 Mon - Fri </p>
+        <footer>
+            <div class="column">
+                <h4>Need further assistance?</h4>
+                <p><strong>Address:</strong> 236 Coventry Road, TW4 5PF, Birmingham </p>
+                <p><strong>Phone:</strong> +44 7748374824 </p>
+                <p><strong>Email:</strong> <a href="mailto:support@devicedirect.com">support@devicedirect.com</a></p>
+                <p><strong>Hours:</strong> 09:00 - 17:00 Mon - Fri </p>
+            </div>
+            <div class="column followus">
+                <h4>Follow Us</h4>
+                <div class="icon">
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
