made the search by category sectionm made the background for the page

--- a/productspage/index.html
+++ b/productspage/index.html
@@ -27,36 +27,51 @@
             </ul>
         </div>
     </section>
-    <section id="Hot Offers">
+    <hr>
+    <h3 style="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Search By Category</h3>
+
+    <section class="catrgoryimages">
+
+        <div class="categorycards">
+            <div class="cimages tvs"></div>
+                <h4>TVs</h4>
+                <p></p>
+                <a href=""></a>    
+        </div></a>
+        <div class="categorycards">
+            <div class="cimages monitors"></div>
+                <h4>Monitors</h4>
+                <p></p>
+                <a href=""></a>         
+        </div>
+        <div class="categorycards">
+            <div class="cimages laptops"></div>
+                <h4>Laptops</h4>
+                <p></p>
+                <a href=""></a>          
+        </div>
+        <div class="categorycards">
+            <div class="cimages headphones"></div>
+                <h4>Headphones</h4>
+                <p></p>
+                <a href=""></a>          
+        </div>
+        <div class="categorycards">
+            <div class="cimages consoles"></div>
+                <h4>Consoles</h4>
+                <p></p>
+                <a href=""></a>         
+        </div>
+   
 
 
     </section>
 
+
     <hr>
-    <h3>Shop By Category</h3>
-    <a href="pagescode/tvcode/tvs.html">
-    <img src="categoryimages/TV category.webp"alt="TVs"height="200">
-    </a>
-
-    <a href="pagescode/monitorscode/monitors.html">
-    <img src="categoryimages/Monitory category.webp"alt="Monitors"height="200">
-    </a>
-
-    <a href="pagescode/laptopscode/laptops.html">
-    <img src="categoryimages/Laptop Category.webp"alt="Laptops"height="200">
-    </a>
-
-    <a href="pagescode/headphonescode/headphones.html">
-    <img src="categoryimages/Headphones category.webp"alt="Headphones"height="200">
-    </a>
-
-    <a href="pagescode/consolescode/consoles.html">
-    <img src="categoryimages/Consoles category.webp"alt="Consoles"height="200">
-    </a>
+    <h3 style="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Shop By Search</h3>
     <hr>
-    <h3>Shop By Search</h3>
-    <hr>
-    <h3>Popular Products</h3>
+    <h3 style ="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Popular Products</h3>
 
     <hr>
     <footer class="">
