added anchor tags

--- a/productspage/index.html
+++ b/productspage/index.html
@@ -32,36 +32,36 @@
 
     <section class="catrgoryimages">
 
-        <div class="categorycards">
+        <a href=""style="text-decoration:none;"><div class="categorycards">
             <div class="cimages tvs"></div>
                 <h4>TVs</h4>
-                <p></p>
-                <a href=""></a>    
+                <p></p> 
         </div></a>
-        <div class="categorycards">
+
+        <a href=""style="text-decoration:none;"><div class="categorycards">
             <div class="cimages monitors"></div>
                 <h4>Monitors</h4>
                 <p></p>
-                <a href=""></a>         
-        </div>
-        <div class="categorycards">
+                       
+        </div></a>
+
+        <a href=""style="text-decoration:none;"><div class="categorycards">
             <div class="cimages laptops"></div>
                 <h4>Laptops</h4>
-                <p></p>
-                <a href=""></a>          
-        </div>
-        <div class="categorycards">
+                <p></p>       
+        </div></a>
+
+        <a href=""style="text-decoration:none;"><div class="categorycards">
             <div class="cimages headphones"></div>
                 <h4>Headphones</h4>
                 <p></p>
-                <a href=""></a>          
-        </div>
-        <div class="categorycards">
+        </div></a>
+
+        <a href=""style="text-decoration:none;"><div class="categorycards">
             <div class="cimages consoles"></div>
                 <h4>Consoles</h4>
-                <p></p>
-                <a href=""></a>         
-        </div>
+                <p></p>      
+        </div></a>
    
 
 
