starting to link pages

--- a/productspage/index.html
+++ b/productspage/index.html
@@ -13,12 +13,12 @@
         <a href="#"><img src="categoryimages/Faveicon.jpg"class="logo"height="80"alt="logo"></a>
         <div>
             <ul id="Navbar">
-                <li><a class = "active" href="">Contact Us</a></li>
-                <li><a class="active" href="">Home</a></li>
-                <li><a class = "active" href="">About Us</a></li>
-                <li><a class = "active" href="">Sign Up</a></li>
-                <li><a class = "active"href="login.html">Log in</a></li>
-                <li><a class = "active"href="">Previous Orders</a></li>
+                <li><a class = "active" href="../contactuspage/contactus.html">Contact Us</a></li>
+                <li><a class="active" href="../landingpage/landingpage.html">Home</a></li>
+                <li><a class = "active" href="../aboutuspage/aboutus.html">About Us</a></li>
+                <li><a class = "active" href="../signup/signup.html">Sign Up</a></li>
+                <li><a class = "active"href="">Log in</a></li>
+                <li><a class = "active"href="../">Previous Orders</a></li>
                 <li><a class = "active"href="">Checkout</a></li>
                 <li><a class = "active"href="index.html">Search</a></li>
                 <li><a href="../checkoutpage/cart.html" class = "active"><i class="far fa-shopping-bag"></i></a></li>
@@ -32,32 +32,32 @@
 
     <section class="catrgoryimages">
 
-        <a href=""style="text-decoration:none;"><div class="categorycards">
+        <a href="../productspage/pagescode/tvcode/tvs.html"style="text-decoration:none;"><div class="categorycards">
             <div class="cimages tvs"></div>
                 <h4>TVs</h4>
                 <p></p> 
         </div></a>
 
-        <a href=""style="text-decoration:none;"><div class="categorycards">
+        <a href="../productspage/pagescode/monitorscode/monitors.html"style="text-decoration:none;"><div class="categorycards">
             <div class="cimages monitors"></div>
                 <h4>Monitors</h4>
                 <p></p>
                        
         </div></a>
 
-        <a href=""style="text-decoration:none;"><div class="categorycards">
+        <a href="../productspage/pagescode/laptopscode/laptops.html"style="text-decoration:none;"><div class="categorycards">
             <div class="cimages laptops"></div>
                 <h4>Laptops</h4>
                 <p></p>       
         </div></a>
 
-        <a href=""style="text-decoration:none;"><div class="categorycards">
+        <a href="../productspage/pagescode/headphonescode/headphones.html"style="text-decoration:none;"><div class="categorycards">
             <div class="cimages headphones"></div>
                 <h4>Headphones</h4>
                 <p></p>
         </div></a>
 
-        <a href=""style="text-decoration:none;"><div class="categorycards">
+        <a href="../productspage/pagescode/consolescode/consoles.html"style="text-decoration:none;"><div class="categorycards">
             <div class="cimages consoles"></div>
                 <h4>Consoles</h4>
                 <p></p>      
