--- a/aboutuspage/aboutus.html
+++ b/aboutuspage/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Device Direct</title>
-    <link rel="icon"type="image/jpg"href="../categoryimages/Faveicon.jpg">
+    <link rel="icon"type="image/jpg"href="categoryimages/Faveicon.jpg">
     <link rel="stylesheet" href="aboutus.css">
 </head>
 <body>
