Edited both html and css pages
Made a few changes

--- a/contactuspage/contactus.html
+++ b/contactuspage/contactus.html
@@ -8,16 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    
-    <div class="container">
-        <!-- Header Section -->
-        <header id="header">
-            <h1><span class="icon">&#9993;</span> Contact Us</h1>
-            <p>We’re here to assist you. Fill out the form below, and we’ll get back to you promptly!</p>
-        </header>
+    <!-- Header Section -->
+    <header id="header">
+        <h1><span class="icon">&#9993;</span> Contact Us</h1>
+        <p>We’re here to assist you. Fill out the form below, and we’ll get back to you promptly!</p>
+    </header>
 
-        <!-- Contact Form Section -->
-        <main class="contact-card">
+    <!-- Contact Form Section -->
+    <main class="contact-form-wrapper">
+        <div class="contact-card">
             <form action="#" method="POST" class="contact-form">
                 <!-- Personal Details -->
                 <fieldset>
@@ -63,26 +62,26 @@
                 <!-- Submit Button -->
                 <button type="submit" class="submit-btn">Send Inquiry</button>
             </form>
-        </main>
+        </div>
+    </main>
 
-        <!-- Footer Section -->
-        <footer>
-            <div class="column">
-                <h4>Need further assistance?</h4>
-                <p><strong>Address:</strong> 236 Coventry Road, TW4 5PF, Birmingham </p>
-                <p><strong>Phone:</strong> +44 7748374824 </p>
-                <p><strong>Email:</strong> <a href="mailto:support@devicedirect.com">support@devicedirect.com</a></p>
-                <p><strong>Hours:</strong> 09:00 - 17:00 Mon - Fri </p>
+    <!-- Footer Section -->
+    <footer>
+        <div class="column">
+            <h4>Need further assistance?</h4>
+            <p><strong>Address:</strong> 236 Coventry Road, TW4 5PF, Birmingham </p>
+            <p><strong>Phone:</strong> +44 7748374824 </p>
+            <p><strong>Email:</strong> <a href="mailto:support@devicedirect.com">support@devicedirect.com</a></p>
+            <p><strong>Hours:</strong> 09:00 - 17:00 Mon - Fri </p>
+        </div>
+        <div class="column followus">
+            <h4>Follow Us</h4>
+            <div class="icon">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
             </div>
-            <div class="column followus">
-                <h4>Follow Us</h4>
-                <div class="icon">
-                    <i class="fab fa-facebook"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-instagram"></i>
-                </div>
-            </div>
-        </footer>
-    </div>
+        </div>
+    </footer>
 </body>
 </html>
