--- a/productspage/pagescode/tvcode/tvs-HD40.html
+++ b/productspage/pagescode/tvcode/tvs-HD40.html
@@ -27,6 +27,30 @@
         </div>
     </section>
     <hr>
+    
+    <section id="details" class="diffitems">
+        <div class="mainimage">
+            <img src="TVs/40inch/HD-40-Black.webp" width ="100%" id="mainimg" alt ="" >
+            <div class="secimages">
+                <div class="secimagescols">
+                    <img src="TVs/40inch/HD-40-White.webp" width="100%" class="small-tvhd">
+                </div>
+            </div>
+        </div>
+        <div class=" description"></div>
+
+
+
+
+
+    </section>
+
+
+
+
+
+
+
   
     <hr>
     <footer class="">
