cart page creating for tvs

--- a/productspage/pagescode/tvcode/tvs-HD40.html
+++ b/productspage/pagescode/tvcode/tvs-HD40.html
@@ -27,6 +27,7 @@
         </div>
     </section>
     <hr>
+    <h3 style="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Select Your Colour</h3>
 
     <section id="details" class="diffitems">
         <div class="mainimage">
@@ -37,11 +38,9 @@
                 </div>
             </div>
         </div>
-        <div class=" description"></div>
-
-
-
-
+        <div class="description">
+            <h6> Search /40-Inch HD</h6>
+        </div>
 
     </section>
 
@@ -52,7 +51,6 @@
 
 
   
-    <hr>
     <footer class="">
 
     
