--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DeviceDirect</title>
+    <title>Electronic Shop</title>
     <link rel="stylesheet" href="assests/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <!-- bootstrap links -->
@@ -44,7 +44,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: rgb(67 0 86);">
                   <li><a class="dropdown-item" href="#">Login</a></li>
-                  <li><a class="dropdown-item" href="#">SignUp</a></li>
+                  <li><a class="dropdown-item" href="#">SingUp</a></li>
                   <li><a class="dropdown-item" href="#">Previous Orders</a></li>
                 </ul>
               </li>
