made tv basket page

--- a/productspage/pagescode/tvcode/tvs-HD40.html
+++ b/productspage/pagescode/tvcode/tvs-HD40.html
@@ -29,18 +29,43 @@
     <hr>
     <h3 style="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Select Your Colour</h3>
 
+
+
     <section id="details" class="diffitems">
         <div class="mainimage">
             <img src="TVs/40inch/HD-40-Black.webp" width ="100%" id="mainimg" alt ="">
             <div class="secimages">
                 <div class="secimagescols">
-                    <img src="TVs/40inch/HD-40-White.webp" width="100%" class="small-tvhd">
+                    <img src="TVs/40inch/HD-40-White.webp" width="100%" class="smallimg">
                 </div>
             </div>
         </div>
-        <div class="description">
-            <h6> Search /40-Inch HD</h6>
+        <div class="maindescription">
+            <br>
+           <h4>40-Inch Black TV</h4>
+           <br>
+           <h2><del>£199.99</del> £99.99     </h2>
+           <br>
+           <select> 
+            <option>Select Colour</option>
+            <option>Black </option>
+            <option>White</option>
+           </select>
+           <input type="number" value="1">
+           <br>
+           <br>
+           <button class="cartclass">Add to Cart</button>
+           <br>
+           <br>
+           <h4>Product Description: HD 40 Inch Black TV – Now at Half Price!</h4>
+           <br>
+           <span>Experience stunning visuals and immersive entertainment with the HD 40 Inch Black TV, the perfect addition to any home. Boasting crystal-clear picture quality, vibrant colors, and sleek modern design, this television is designed to enhance your viewing experience, whether you're watching your favorite movies, shows, or gaming. With advanced 4D surround sound technology and multiple connectivity options, including HDMI and USB, it's ready to integrate seamlessly into your setup.
+
+            Limited Time Offer: Get this incredible HD TV at half the original price! Don't miss this opportunity to upgrade your entertainment system and bring cinematic visuals right to your living room.
+            
+            Click "Add to Basket" now to make it yours before the deal ends!</span>
         </div>
+        
 
     </section>
 
