--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -431,7 +431,7 @@
             </div>
 
             <div class="col-lg-3 col-md-6 footer-links">
-              <h4>Usefull Links</h4>
+              <h4>Useful Links</h4>
              <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">About Us</a></li>
