--- a/aboutuspage/aboutus.html
+++ b/aboutuspage/aboutus.html
@@ -20,7 +20,8 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html" id="logo"><span id="span1">D</span>evice <span>Direct</span></a>
+          <a class="navbar-brand" href="index.html" id="logo">
+            <img src="./assets/images/Device Direct Logo.png" alt="Device Direct Logo" width="120px" height="auto">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span><img src="./assests/images/menu.png" alt="" width="30px"></span>
           </button>
@@ -140,7 +141,7 @@
               </div>
   
               <div class="col-lg-3 col-md-6 footer-links">
-                <h4>Usefull Links</h4>
+                <h4>Useful Links</h4>
                <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About Us</a></li>
