--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -50,18 +50,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/Landing-Page/index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Shop</a>
+              <a class="nav-link" href="/productspage/index.html">Shop</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="/aboutuspage/aboutus.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="/contactuspage/contactus.html"
+                >Contact</a
+              >
             </li>
             <li class="nav-item dropdown">
               <a
@@ -79,9 +84,19 @@
                 aria-labelledby="navbarDropdown"
                 style="background-color: rgb(67 0 86)"
               >
-                <li><a class="dropdown-item" href="#">Login</a></li>
+                <li>
+                  <a class="dropdown-item" href="/loginpage/login.html"
+                    >Login</a
+                  >
+                </li>
                 <li><a class="dropdown-item" href="#">SignUp</a></li>
-                <li><a class="dropdown-item" href="#">Previous Orders</a></li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="/previousorders/previousorders.html"
+                    >Previous Orders</a
+                  >
+                </li>
               </ul>
             </li>
           </ul>
