--- a/contactuspage/contactus.html
+++ b/contactuspage/contactus.html
@@ -1,87 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Device Direct</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us</title>
+  <link rel="icon" type="image/jpg" href="categoryimages/Faveicon.jpg">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header Section -->
-    <header id="header">
-        <h1><span class="icon">&#9993;</span> Contact Us</h1>
-        <p>We’re here to assist you. Fill out the form below, and we’ll get back to you promptly!</p>
-    </header>
+  <section id="header">
+    <a href="#"><img src="categoryimages/Faveicon.jpg" class="logo" height="80" alt="logo"></a>
+    <div>
+      <ul id="Navbar">
+        <li><a href="contact.html" class="active">Contact Us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="signup.html">Sign Up</a></li>
+        <li><a href="login.html">Log In</a></li>
+        <li><a href="previousorders.html">Previous Orders</a></li>
+        <li><a href="checkout.html">Check Out</a></li>
+        <li><a href="search.html">Search</a></li>
+        <li><a href="cart.html" class="active"><i class="far fa-shopping-bag"></i></a></li>
+      </ul>
+    </div>
+  </section>
 
-    <!-- Contact Form Section -->
-    <main class="contact-form-wrapper">
-        <div class="contact-card">
-            <form action="#" method="POST" class="contact-form">
-                <!-- Personal Details -->
-                <fieldset>
-                    <legend><span class="icon">&#128100;</span> Personal Details</legend>
-                    <div class="form-group">
-                        <label for="fullName">Full Name <span>(Optional)</span></label>
-                        <input type="text" id="fullName" name="fullName" placeholder="John Doe">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email Address <span class="required">*</span></label>
-                        <input type="email" id="email" name="email" placeholder="example@domain.com" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="phone">Phone Number <span>(Optional)</span></label>
-                        <input type="tel" id="phone" name="phone" placeholder="+44 1234 567890">
-                    </div>
-                    <div class="form-group">
-                        <label for="orderNumber">Order Number <span>(Required for order-related issues)</span></label>
-                        <input type="text" id="orderNumber" name="orderNumber" placeholder="ORD123456">
-                    </div>
-                </fieldset>
+  <main>
+    <section class="contact-section">
+      <div class="container">
+        <h2>Contact Us</h2>
+        <p>Have questions or need assistance? Reach out to us using the form below.</p>
+        <form action="#" method="post">
+          <div class="form-group">
+            <label for="name">Full Name</label>
+            <input type="text" id="name" name="name" placeholder="Enter your full name" required>
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea id="message" name="message" placeholder="Write your message or enquiry" rows="5" required></textarea>
+          </div>
+          <button type="submit" class="btn">Submit</button>
+        </form>
+      </div>
+    </section>
+  </main>
 
-                <!-- Inquiry Details -->
-                <fieldset>
-                    <legend><span class="icon">&#128172;</span> Inquiry Details</legend>
-                    <div class="form-group">
-                        <label for="subject">Subject/Topic <span class="required">*</span></label>
-                        <select id="subject" name="subject" required>
-                            <option value="" disabled selected>Select a topic</option>
-                            <option value="general-inquiry">General Inquiry</option>
-                            <option value="order-issue">Order Issue</option>
-                            <option value="technical-support">Technical Support</option>
-                            <option value="returns-refunds">Returns/Refunds</option>
-                            <option value="warranty-claim">Warranty Claim</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message <span class="required">*</span></label>
-                        <textarea id="message" name="message" placeholder="Please describe your issue or inquiry in detail." required></textarea>
-                    </div>
-                </fieldset>
-
-                <!-- Submit Button -->
-                <button type="submit" class="submit-btn">Send Inquiry</button>
-            </form>
+  <footer>
+    <div class="column">
+      <h4>Contact Details</h4>
+      <p><strong>Address</strong>: 236 Coventry Road, TW4 5PF, Birmingham</p>
+      <p><strong>Phone</strong>: +44 7748374824</p>
+      <p><strong>Email</strong>: support@devicedirect.co.uk</p>
+      <p><strong>Hours</strong>: 09:00 - 17:00 Mon - Fri</p>
+      <div class="followus">
+        <h4>Find us</h4>
+        <div class="icon">
+          <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
+          <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+          <a href="https://x.com"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
         </div>
-    </main>
-
-    <!-- Footer Section -->
-    <footer>
-        <div class="column">
-            <h4>Need further assistance?</h4>
-            <p><strong>Address:</strong> 236 Coventry Road, TW4 5PF, Birmingham </p>
-            <p><strong>Phone:</strong> +44 7748374824 </p>
-            <p><strong>Email:</strong> <a href="mailto:support@devicedirect.com">support@devicedirect.com</a></p>
-            <p><strong>Hours:</strong> 09:00 - 17:00 Mon - Fri </p>
-        </div>
-        <div class="column followus">
-            <h4>Follow Us</h4>
-            <div class="icon">
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-instagram"></i>
-            </div>
-        </div>
-    </footer>
+      </div>
+    </div>
+    <div class="column">
+      <h4>About</h4>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Contact Us</a>
+    </div>
+    <div class="column">
+      <h4>Account</h4>
+      <a href="#">Log In</a>
+      <a href="#">Sign Up</a>
+      <a href="#">Wishlist</a>
+      <a href="#">View Cart</a>
+      <a href="#">Previous Orders</a>
+    </div>
+    <div class="column">
+      <h4>Install the App</h4>
+      <p>From Google play or the Apple Store</p>
+      <div class="row">
+        <a href="https://www.apple.com/uk/app-store/"><img src="categoryimages/applestore.png" height="65" alt="Install on apple"></a>
+        <a href="https://play.google.com/store/games"><img src="categoryimages/googleplaystore.png" height="65" alt="Install on google play"></a>
+      </div>
+      <p>Payment methods accepted:</p>
+      <div class="paymentmethods">
+        <img class="paymentphoto" src="categoryimages/mastercard logo.jpg" height="40" width="80" alt="mastercard">
+        <img class="paymentphoto" src="categoryimages/paypal logo.svg" height="40" alt="paypal">
+        <img class="paymentphoto" src="categoryimages/visa logo.jpg" height="40" alt="visa">
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
