--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -31,8 +31,13 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg" id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html" id="logo"
-          ><span id="span1">D</span>evice <span>Direct</span></a
+        <a class="navbar-brand" href="index.html" id="logo">
+          <img
+            src="/Landing-Page/assests/images/logo.jpg"
+            alt="Device Direct Logo"
+            class="logo-img"
+          />
+          <span id="span1">D</span>evice <span>Direct</span></a
         >
         <button
           class="navbar-toggler"
@@ -111,6 +116,11 @@
               Search
             </button>
           </form>
+          <div class="cart-btn">
+            <a href="/checkoutpage/cart.html"
+              ><i class="fas fa-shopping-bag"></i
+            ></a>
+          </div>
         </div>
       </div>
     </nav>
@@ -121,13 +131,15 @@
       <div class="content">
         <h1>
           <br />
-          Tech Now <span id="span2">Pay Later!</span>
+          Latest Tech <span id="span2">Unbeatable Prices!</span>
         </h1>
         <p>
           Found it cheaper? We wil match it! <br />We will price match against
           any other UK retailer.
         </p>
-        <div class="btn"><button>Shop Now</button></div>
+        <div class="btn">
+          <a href="/productspage/index.html"> <button>Shop Now</button></a>
+        </div>
       </div>
       <div class="img">
         <img src="./assests/images/image1.png" alt="" />
@@ -137,20 +149,13 @@
 
     <!-- product cards -->
     <div class="container" id="product-cards">
-      <h1 class="text-center" style="color: #212f3d">PRODUCTS</h1>
+      <h1 class="text-center" style="color: #212f3d">Recommended for you</h1>
       <div class="row" style="margin-top: 30px">
         <div class="col-md-3 py-3 py-md-0">
           <div class="card">
             <img src="./assests/images/p6.png" alt="" />
             <div class="card-body">
               <h3 class="text-center">Iphone 13 pro</h3>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
               <h2>
                 £1000 <span><li class="fa-solid fa-cart-shopping"></li></span>
               </h2>
@@ -300,7 +305,9 @@
               <h3>Best Laptop</h3>
               <h5>Latest Collection</h5>
               <p>Up To 50% Off</p>
-              <button id="shopnow">Shop Now</button>
+              <a href="/productspage/pagescode/laptopscode/laptops.html">
+                <button id="shopnow">Shop Now</button></a
+              >
             </div>
           </div>
         </div>
@@ -311,7 +318,9 @@
               <h3>Best Headphone</h3>
               <h5>Latest Collection</h5>
               <p>Up To 50% Off</p>
-              <button id="shopnow">Shop Now</button>
+              <a href="/productspage/pagescode/headphonescode/headphones.html">
+                <button id="shopnow">Shop Now</button></a
+              >
             </div>
           </div>
         </div>
@@ -323,7 +332,7 @@
     <section class="banner">
       <div class="content">
         <h1>
-          <span>Devices</span>
+          <span>Great Deals</span>
           <br />
           Up To <span id="span2">50%</span> Off
         </h1>
@@ -333,7 +342,9 @@
           home office, or looking for the perfect gift, our collection has
           something for everyone.
         </p>
-        <div class="btn"><button>Shop Now</button></div>
+        <div class="btn">
+          <a href="/productspage/index.html"> <button>Shop Now</button></a>
+        </div>
       </div>
       <div class="img">
         <img src="./assests/images/image1.png" alt="" />
@@ -375,16 +386,6 @@
     </div>
     <!-- other cards -->
 
-    <!-- Customer Reviews -->
-    <section class="testimonials">
-      <div class="reviews-container">
-        <div class="reviews-section-header">
-          <h2 class="review-title">Reviews From Our Customers</h2>
-        </div>
-      </div>
-    </section>
-    <!-- Customer Reviews -->
-
     <!-- offer -->
     <div class="container" id="offer">
       <div class="row">
@@ -415,7 +416,7 @@
     <!-- newslater -->
     <div class="container" id="newslater">
       <h3 class="text-center">
-        Subscribe To Our Email So You Can Get Our Latest Deals.
+        Subscribe To Our Newsletter So You Can Get Our Latest Deals.
       </h3>
       <div class="input text-center">
         <input type="text" placeholder="Enter Your Email.." />
@@ -447,7 +448,7 @@
                 <li><a href="/aboutuspage/aboutus.html">About Us</a></li>
                 <li><a href="/loginpage/login.html">Account</a></li>
                 <li>
-                  <a href="/productspage/index.html">Service We Provide</a>
+                  <a href="/productspage/index.html">Shop Now</a>
                 </li>
                 <li><a href="/contactuspage/contactus.html">Contact Us</a></li>
               </ul>
