--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -32,6 +32,7 @@
     <nav class="navbar navbar-expand-lg" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html" id="logo"
+          > <a class="navbar-brand" href="index.html" id="logo"
           ><span id="span1">D</span>evice <span>Direct</span></a
         >
         <button
