--- a/aboutuspage/aboutus.html
+++ b/aboutuspage/aboutus.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html" id="logo">
-            <img src="./assets/images/Device Direct Logo.png" alt="Device Direct Logo" width="120px" height="auto">
+            <img src="../Landing-Page/assests/images/device_direct_logo.png" alt="Device Direct Logo" width="100px" height="auto">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span><img src="./assests/images/menu.png" alt="" width="30px"></span>
           </button>
