--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -31,9 +31,13 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg" id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html" id="logo"
-          > <a class="navbar-brand" href="index.html" id="logo"
-          ><span id="span1">D</span>evice <span>Direct</span></a
+        <a class="navbar-brand" href="index.html" id="logo">
+          <img
+            src="/Landing-Page/assests/images/logo.jpg"
+            alt="Device Direct Logo"
+            class="logo-img"
+          />
+          <span id="span1">D</span>evice <span>Direct</span></a
         >
         <button
           class="navbar-toggler"
