added change colour/item functionality

--- a/productspage/pagescode/tvcode/tvs-HD40.html
+++ b/productspage/pagescode/tvcode/tvs-HD40.html
@@ -27,29 +27,29 @@
         </div>
     </section>
     <hr>
-    
+
     <h3 style="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Select Your Colour</h3>
 
 
 
     <section id="details" class="diffitems">
         <div class="mainimage">
-            <img src="TVs/40inch/HD-40-Black.webp" width ="100%" id="mainhd40inchimage" alt ="">
+            <img src="TVs/40inch/HD-40-Black.webp" width ="100%" id="normal" alt ="">
             <div class="secimages">
                 <div class="secimagescols">
-                    <img src="TVs/40inch/HD-40-Black.webp" width="100%" class="smallimg" id="black-40-hd-img">
+                    <img src="TVs/40inch/HD-40-Black.webp" width="100%" class="smallimg" id="black">
                 </div>
                 <div class="secimagescols">
-                    <img src="TVs/40inch/HD-40-White.webp" width="100%" class="smallimg" id="white-40-hd-img">
+                    <img src="TVs/40inch/HD-40-White.webp" width="100%" class="smallimg" id="white">
                 </div>
 
             </div>
         </div>
         <div class="maindescription">
             <br>
-           <h4>40-Inch Black TV</h4>
+           <h4 id="pname">40-Inch Black TV HD</h4>
            <br>
-           <h2><del>£199.99</del> £99.99     </h2>
+           <h2 id="pprice"><del>£199.99</del> £99.99     </h2>
            <br>
            <select id="colourselector"> 
             <option value="Black">Black </option>
@@ -61,9 +61,9 @@
            <button class="cartclass">Add to Cart</button>
            <br>
            <br>
-           <h4>Product Description: HD 40 Inch Black TV – Now at Half Price!</h4>
+           <h4 id="pdescriptionheading" >Product Description: HD 40 Inch Black TV – Now at Half Price!</h4>
            <br>
-           <span>Experience stunning visuals and immersive entertainment with the HD 40 Inch Black TV, the perfect addition to any home. Boasting crystal-clear picture quality, vibrant colors, and sleek modern design, this television is designed to enhance your viewing experience, whether you're watching your favorite movies, shows, or gaming. With advanced 4D surround sound technology and multiple connectivity options, including HDMI and USB, it's ready to integrate seamlessly into your setup.
+           <span id="pdescription">Experience stunning visuals and immersive entertainment with the HD 40 Inch Black TV, the perfect addition to any home. Boasting crystal-clear picture quality, vibrant colors, and sleek modern design, this television is designed to enhance your viewing experience, whether you're watching your favorite movies, shows, or gaming. With advanced 4D surround sound technology and multiple connectivity options, including HDMI and USB, it's ready to integrate seamlessly into your setup.
 
             Limited Time Offer: Get this incredible HD TV at half the original price! Don't miss this opportunity to upgrade your entertainment system and bring cinematic visuals right to your living room.
             
