new device direct logo, landing and aboutus, change all other pages as well

--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -33,7 +33,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html" id="logo">
           <img
-            src="/Landing-Page/assests/images/logo.jpg"
+            src="/Landing-Page/assests/images/device_direct_logo.png"
             alt="Device Direct Logo"
             class="logo-img"
           />
