Syncing all tv pages so code is modular and not repetetive

--- a/productspage/pagescode/tvcode/tvs-4K40.html
+++ b/productspage/pagescode/tvcode/tvs-4K40.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="tvstyle.css">
 </head>
-<body>
+<body data-model="i4k40">
     <section id="header">
         <a href="#"><img src="Faveicon.jpg"class="logo"height="80"alt="logo"></a>
         <div>
@@ -27,7 +27,46 @@
     </section>
     <hr>
 
-    <hr>
+    <h3 style="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Select Your Colour</h3>
+
+
+
+    <section id="details" class="diffitems">
+        <div class="mainimage">
+            <img src="TVs/40inch/4K-40-Black.webp" width ="100%" id="normal" alt ="">
+            <div class="secimages">
+                <div class="secimagescols">
+                    <img src="TVs/40inch/4K-40-Black.webp" width="100%" class="smallimg" id="black">
+                </div>
+                <div class="secimagescols">
+                    <img src="TVs/40inch/4k-40-White.webp" width="100%" class="smallimg" id="white">
+                </div>
+
+            </div>
+        </div>
+        <div class="maindescription">
+            <br>
+           <h4 id="pname">40-Inch Black TV 4K</h4>
+           <br>
+           <h2 id="pprice"><del>£249.99</del> £149.99     </h2>
+           <br>
+           <select id="colourselector"> 
+            <option value="Black">Black </option>
+            <option value="White">White</option>
+           </select>
+           <input type="number" value="1">
+           <br>
+           <br>
+           <button class="cartclass">Add to Cart</button>
+           <br>
+           <br>
+           <h4 id="pdescriptionheading" >Product Description: 4K 40 Inch Black TV</h4>
+           <br>
+           <span id="pdescription">Discover the brilliance of ultra-high definition with the 4K 40 Inch Black TV. Compact yet powerful, this TV combines sleek design with cutting-edge 4K resolution, offering unparalleled clarity and lifelike color details. Perfect for bedrooms, kitchens, or smaller living spaces, this TV ensures every pixel delivers perfection, whether you’re streaming, gaming, or watching live TV. Complete with advanced sound technology and seamless connectivity through HDMI and USB, it’s designed to fit effortlessly into your modern lifestyle. Don’t miss out—upgrade to 4K quality now and enjoy an exclusive offer for a limited time only!</span>
+        </div>
+        
+
+    </section>
     <footer class="">
 
     
