--- a/productspage/pagescode/tvcode/tvs-4K60.html
+++ b/productspage/pagescode/tvcode/tvs-4K60.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="tvstyle.css">
 </head>
-<body>
+<body data-model="i4k60">
     <section id="header">
         <a href="#"><img src="Faveicon.jpg"class="logo"height="80"alt="logo"></a>
         <div>
@@ -28,7 +28,46 @@
     </section>
     <hr>
 
-    <hr>
+    <h3 style="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Select Your Colour</h3>
+
+
+
+    <section id="details" class="diffitems">
+        <div class="mainimage">
+            <img src="TVs/60inch/4k-60-Black.webp" width ="100%" id="normal" alt ="">
+            <div class="secimages">
+                <div class="secimagescols">
+                    <img src="TVs/60inch/4k-60-Black.webp" width="100%" class="smallimg" id="black">
+                </div>
+                <div class="secimagescols">
+                    <img src="TVs/60inch/4k-60-White.webp" width="100%" class="smallimg" id="white">
+                </div>
+
+            </div>
+        </div>
+        <div class="maindescription">
+            <br>
+           <h4 id="pname">60-Inch Black TV 4K</h4>
+           <br>
+           <h2 id="pprice"><del>£299.99</del> £199.99    </h2>
+           <br>
+           <select id="colourselector"> 
+            <option value="Black">Black </option>
+            <option value="White">White</option>
+           </select>
+           <input type="number" value="1">
+           <br>
+           <br>
+           <button class="cartclass">Add to Cart</button>
+           <br>
+           <br>
+           <h4 id="pdescriptionheading" >Product Description: 4K 60 Inch Black TV </h4>
+           <br>
+           <span id="pdescription">Experience entertainment in breathtaking clarity with the 4K 60 Inch Black TV. With stunning ultra-high-definition visuals, lifelike colors, and a cinematic 60-inch display, this TV is built for serious viewing pleasure. Ideal for family movie nights or competitive gaming, it immerses you in a world of unparalleled detail and vibrant imagery. Boasting cutting-edge sound technology, along with HDMI and USB ports for easy connectivity, it’s ready to transform your entertainment space. Take advantage of this limited-time deal and bring home the ultimate 4K entertainment upgrade today!</span>
+        </div>
+        
+
+    </section>
     <footer class="">
 
     
