--- a/productspage/pagescode/tvcode/tvs-4K80.html
+++ b/productspage/pagescode/tvcode/tvs-4K80.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="tvstyle.css">
 </head>
-<body>
+<body data-model="i4k80">
     <section id="header">
         <a href="#"><img src="Faveicon.jpg"class="logo"height="80"alt="logo"></a>
         <div>
@@ -27,7 +27,46 @@
     </section>
     <hr>
 
-    <hr>
+    <h3 style="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Select Your Colour</h3>
+
+
+
+    <section id="details" class="diffitems">
+        <div class="mainimage">
+            <img src="TVs/80inch/4k-80-Black.webp" width ="100%" id="normal" alt ="">
+            <div class="secimages">
+                <div class="secimagescols">
+                    <img src="TVs/80inch/4k-80-Black.webp" width="100%" class="smallimg" id="black">
+                </div>
+                <div class="secimagescols">
+                    <img src="TVs/80inch/4k-80-White.webp" width="100%" class="smallimg" id="white">
+                </div>
+
+            </div>
+        </div>
+        <div class="maindescription">
+            <br>
+           <h4 id="pname">80-Inch Black TV 4k</h4>
+           <br>
+           <h2 id="pprice"><del>£349.99</del> £299.99    </h2>
+           <br>
+           <select id="colourselector"> 
+            <option value="Black">Black </option>
+            <option value="White">White</option>
+           </select>
+           <input type="number" value="1">
+           <br>
+           <br>
+           <button class="cartclass">Add to Cart</button>
+           <br>
+           <br>
+           <h4 id="pdescriptionheading" >Product Description: 4K 80 Inch Black TV </h4>
+           <br>
+           <span id="pdescription">Immerse yourself in cinematic brilliance with the 4K 80 Inch Black TV—the ultimate centerpiece for your entertainment space. Its enormous display paired with stunning 4K resolution ensures every scene comes to life with razor-sharp detail and vivid color accuracy. Whether you’re hosting a movie marathon, gaming tournament, or sports viewing party, this TV delivers a truly immersive experience. With cutting-edge surround sound and versatile connectivity, it’s the perfect combination of technology and design. Limited Time Offer: Take this opportunity to own the pinnacle of home entertainment at a fraction of the cost. Click now to claim yours before it’s gone!</span>
+        </div>
+        
+
+    </section>
     <footer class="">
 
     
