--- a/productspage/pagescode/tvcode/tvs-HD40.html
+++ b/productspage/pagescode/tvcode/tvs-HD40.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="tvstyle.css">
 </head>
-<body>
+<body data-model="hd40">
     <section id="header">
         <a href="#"><img src="Faveicon.jpg"class="logo"height="80"alt="logo"></a>
         <div>
