--- a/productspage/pagescode/tvcode/tvs-HD60.html
+++ b/productspage/pagescode/tvcode/tvs-HD60.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="tvstyle.css">
 </head>
-<body>
+<body data-model="hd60">
     <section id="header">
         <a href="#"><img src="Faveicon.jpg"class="logo"height="80"alt="logo"></a>
         <div>
@@ -28,8 +28,46 @@
     </section>
     <hr>
 
-    <hr>
-    <!--This is a comment -->
+    <h3 style="text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 15px;">Select Your Colour</h3>
+
+
+
+    <section id="details" class="diffitems">
+        <div class="mainimage">
+            <img src="TVs/60inch/HD-60-Black.webp" width ="100%" id="normal" alt ="">
+            <div class="secimages">
+                <div class="secimagescols">
+                    <img src="TVs/60inch/HD-60-Black.webp" width="100%" class="smallimg" id="black">
+                </div>
+                <div class="secimagescols">
+                    <img src="TVs/60inch/HD-60-White.webp" width="100%" class="smallimg" id="white">
+                </div>
+
+            </div>
+        </div>
+        <div class="maindescription">
+            <br>
+           <h4 id="pname">HD 60 Inch Black TV</h4>
+           <br>
+           <h2 id="pprice"><del>£249.99</del>£149.99</h2>
+           <br>
+           <select id="colourselector"> 
+            <option value="Black">Black </option>
+            <option value="White">White</option>
+           </select>
+           <input type="number" value="1">
+           <br>
+           <br>
+           <button class="cartclass">Add to Cart</button>
+           <br>
+           <br>
+           <h4 id="pdescriptionheading" >Product Description: HD 60 Inch Black TV</h4>
+           <br>
+           <span id="pdescription">Elevate your home entertainment experience with the HD 60 Inch Black TV, a stunning blend of size, style, and performance. Featuring crisp high-definition resolution, vivid color reproduction, and a sleek aesthetic, this TV is the centerpiece for any living space. Whether you're watching blockbuster movies or binge-watching your favorite series, the expansive 60-inch display ensures you won’t miss a single detail. With 4D surround sound, HDMI, and USB ports for ultimate connectivity, it's ready to take your viewing experience to the next level. Don't wait—get this incredible HD TV today at an unbeatable price. Upgrade now to experience entertainment like never before!</span>
+        </div>
+        
+
+    </section>
     <footer class="">
 
     
