changed remove button look and added quantity

--- a/checkoutpage/cart.html
+++ b/checkoutpage/cart.html
@@ -39,6 +39,7 @@
                         <p>Product Title</p>
                         <p>Product Colour</p>
                         <p>Price</p>
+                        <input type="number" name="quantity" value="1" min="1" style="width: 50px;">
                         <button type="button" name="button">x</button>
                     </div>
                 </div>
@@ -48,6 +49,7 @@
                         <p>Product Title</p>
                         <p>Product Colour</p>
                         <p>Price</p>
+                        <input type="number" name="quantity" value="1" min="1" style="width: 50px;">
                         <button type="button" name="button">x</button>
                     </div>
                 </div>
