--- a/aboutuspage/aboutus.html
+++ b/aboutuspage/aboutus.html
@@ -77,9 +77,23 @@
     </nav>
     <!-- navbar -->
 
+    <!--Hero Section-->
+
+
+    <section id="hero">
+      <div class="hero-bg">
+        <img 
+        src="/Landing-Page/assests/images/about-hero.png" 
+        alt="About Us Banner">
+      </div>
+      <div class="hero-text">
+        <h1>About Device Direct</h1>
+        <p>The tech you need. At prices you deserve.</p>
+      </div>
+    </section>
+
     <!-- About Us Section -->
     <section id="about">
-      <h3>About Us</h3>
 
       <h4>Who We Are</h4>
       <p>
